--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/stylesheets/master.css">
     <title>Welcome</title>
   </head>
   <body>
