--- a/public/page.html
+++ b/public/page.html
@@ -99,43 +99,35 @@
      <div class="header">
        <nav>
          <ul class="nav nav-pills pull-right">
-           <li role="presentation" class="active"><a href="/">홈</a></li>
+           <li role="presentation"><a href="/">홈</a></li>
            <li role="presentation"><a href="#">로그인</a></li>
            <li role="presentation"><a href="#">회원가입</a></li>
             <li role="presentation"><a href="about">소개</a></li>
          </ul>
        </nav>
-       <h3 class="text-muted">후렌띠 후라이</h3>
+       <h3 class="text-muted">프린세스 커넥트! re:Dive</h3>
      </div>
      <br>
-     <div class="jumbotron">
-       <h1>리세마라 서버 <span class="glyphicon glyphicon-signal"></span></h1>
-       <p class="lead">실시간으로 올라오는 리세마라 계정 생성 근황을 확인하세요.</p>
-       <p><a class="btn btn-lg btn-success" href="chat" role="button">생성중인 계정 보기</a></p>
-     </div>
      <div class="row marketing">
        <div class="col-lg-6">
-         <h2>간편 결제</h2>
-        <h4>#프린세스 커넥트! re:Dive <span class="glyphicon glyphicon-signal"></span></h4>
-         <p>리세마라 계정 구매      <a class="btn btn-sm btn-success" href="list" role="button"> 구매 </a></p></p>
-        <h4>#크루세이더 퀘스트<span class="glyphicon glyphicon-signal"></span></h4>
-         <p>리세마라 계정 구매</p>
-       </div>
-       <div class="col-lg-6">
-         <h2>회원 결제</h2>
-         <!--
-         <h4>#게임 이름 1 <span class="glyphicon glyphicon-signal"></span></h4>
-         <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+         <form id="opption">
+           <div class="form-group">
+               <label>정보 입력란</label>
+               <input class="form-control" id="username"/>
+               <br>
+               <select class="selectpicker">
+  <option title="Combo 1">마코토 스타트 + @ (5000원) 즉시 지급형</option>
+  <option title="Combo 2">쥰 스타트 + @(5000원) 즉시 지급형</option>
+  <option title="Combo 3">마코토,쥰 스타트 (5000원 + @ ) 생성시 지급형</option>
+</select>
 
-         <h4>#게임 이름 2 <span class="glyphicon glyphicon-signal"></span></h4>
-         <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-        <h4>#게임 이름 3 <span class="glyphicon glyphicon-signal"></span></h4>
-         <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>-->
-         <p> 공사중
+               <br/>
+               <br>
+               <input type="submit" class="btn btn-primary" value="확 인" />
+           </div>
+         </form>
        </div>
      </div>
-
      <footer class="footer">
        <p>&copy; Company 2019 Franch Fry </p>
        <div class="col-lg-6">
